Added dependencies between courses.

--- a/blog/May 11, 2020.md
+++ b/blog/May 11, 2020.md
@@ -8,6 +8,10 @@ To do:
     * [X] COMP 2150
     * [X] ~~COMP 2280~~
     * [X] ~~COMP 2080~~
+* [ ] Identify and mark objectives from COMP 1020 explicitly referred to by
+      other courses.
+    * [ ] Figure out a dependency indicator (maybe it's just another tag?)
+    * [ ] Go through and mark the dependencies.
 
 ---
 
@@ -23,6 +27,10 @@ For COMP 2140, the assumptions/expectations for COMP 1020 students are:
   linked list.
 * Familiarity with the idea of recursion, but not necessarily able to read,
   explain, or write recursive methods/functions.
+* Do text I/O on a file.
+* Describe and implement linear search, binary search.
+* Describe how runtime of an $O(\log_2(n))$ or exponential algorithm is affected
+  by input size (i.e., doubling or halving).
   
 I've asked for more feedback on file processing, algorithms, and complexity.
 
