--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -96,7 +96,7 @@ By the end of this unit, students should be able to:
 
 By the end of this unit, students should be able to:
 
-1. Use the `Scanner` class to get input on standard input. :program:
+1. Use the `Scanner` class to get input on standard input. :program: &2160&
     1. Get tokenized input with specific types (e.g., `nextInt()`, `nextLong()`,
        `nextDouble()`, etc)
     2. Get line-based input with `nextLine()`.
@@ -173,7 +173,7 @@ OOP Basics 1
 By the end of this unit, students should be able to:
 
 1. Define the term "Object-oriented programming". :oo:
-   :communicate#explain-basic-oo-concepts:
+   :communicate#explain-basic-oo-concepts: &2150& &2160&
     1. List the properties of a class (e.g., methods, data).
     2. Explain what the `this` keyword represents in an instance method of a
        class.
@@ -183,9 +183,9 @@ By the end of this unit, students should be able to:
        apply the principle of encapsulation.
 2. Decide if an instance method or instance variable can be invoked or used in a
    specific scope given its access modifier. :oo:
-   :evaluate#evaluate-method-overloading:
+   :evaluate#evaluate-method-overloading: &2150&
 3. Declare, initialize, and use instances of a *user-defined* class. :oo:
-   :program#create-and-use-a-class:
+   :program#create-and-use-a-class: &2140& &2150& &2160&
     1. Write a "default constructor" for a class.
     2. Write and call instance methods for a class (e.g., `toString`,
        `compareTo`).
@@ -215,15 +215,15 @@ By the end of this unit, students should be able to:
    :communicate#basic-explain-garbage-collection:
 4. Compose a class from several other classes by declaring instance variables
    using other user-defined types (e.g., a `Person` has an `Address`). :program:
-   :design#composite-objects: :oo:
+   :design#composite-objects: :oo: &2140& &2150&
 5. Declare a class that refers to itself with instance variables (e.g., a
    `Person` has other `Person` attributes, like parents).
-   :oo: :program#write-self-referencing-classes:
+   :oo: :program#write-self-referencing-classes: &2140&
 6. Write and use a "list" class to represent a collection of values.
-   :data-structures#lists-for-collections: :program:
+   :data-structures#lists-for-collections: :program: &2140& &2160&
 7. Explain how using a "list" class can be better than using an array to
    represent collections of values. :data-structures:
-   :communicate#ifferences-between-list-and-array:
+   :communicate#differences-between-list-and-array:
    
 Multi-dimensional arrays
 ------------------------
@@ -242,9 +242,9 @@ By the end of this unit, students should be able to:
 3. Create "useful" instance methods for a class. [^useful-methods]
    :design#identify-common-operations: 
 4. Separate code into multiple files, then recompile into a single program.
-   :program#multi-file-compilation:
+   :program#multi-file-compilation: &2160&
 5. Write a simple, manual testing method for a class, in a separate file.
-   :testing#automated-testing:
+   :testing#automated-testing: &2160&
 
 [^useful-methods]: In the context of this course, a "useful" instance method is
 one that provides matrix operations on a class that contains a multi-dimensional
@@ -261,7 +261,7 @@ By the end of this unit, students should be able to:
    :program#create-and-use-exceptions:
     1. Use built-in Java `Exception` types.
     2. Create user-defined `Exception` types.
-2. Write code to read plain text from a file. :files#read-from-a-file:
+2. Write code to read plain text from a file. :files#read-from-a-file: &2140&
 3. Handle exceptions thrown (`try`/`catch`) by library code (specifically: I/O).
    :program#write-code-to-read-files-handle-exceptions:
     1. Decide if an `Exception` should be handled in a `try`/`catch` block, or
@@ -274,7 +274,7 @@ By the end of this unit, students should be able to:
 6. Read and write text files in a program.
    :program#read-and-write-files:
 7. Parse the contents of a file by tokenizing strings in a program (e.g.,
-   `String#split` or `Scanner`). :files#tokenizing-strings:
+   `String#split` or `Scanner`). :files#tokenizing-strings: &2140&
     1. Create an instance of a class based on the data that's contained within a
        file.
    
@@ -285,7 +285,7 @@ OOP Polymorphism 1
 By the end of this unit, students should be able to:
 
 1. Create and use a subclass in a Java program. :oo:
-   :program#create-and-use-subclasses:
+   :program#create-and-use-subclasses: &2150&
     1. Write one or more non-default constructors in a class hierarchy.
     2. Call the constructor or method in the parent class with the `super`
        keyword.
@@ -295,9 +295,9 @@ By the end of this unit, students should be able to:
 2. Given a class and subclass that have properties or behaviour with the same
    name (instance variables or method signatures), determine which property is
    being referred to in a specific scope. :oo:
-   :evaluate#decide-which-property-is-referred-to-in-scope:
+   :evaluate#decide-which-property-is-referred-to-in-scope: &2150&
 3. Use implicit and explicit typecasting to broaden or narrow the type of a
-   value. :oo: :program#upcast-and-downcast-instances:
+   value. :oo: :program#upcast-and-downcast-instances: &2150&
     1. Safely cast between types using the `instanceof` operator.
 4. Define the term "polymorphism". :oo: :communicate#define-polymorphism:
     1. Explain how polymorphism is related to `abstract` classes in Java.
@@ -342,9 +342,9 @@ By the end of this unit, students should be able to:
 
 1. Compare and contrast lists and arrays (e.g., insertion/deletion time, access
    time, contiguous memory allocation, size restrictions, etc).
-   :data-structures: :communicate#compare-data-structures:
+   :data-structures: :communicate#compare-data-structures: &2140&
 2. Create and use a linked list data structure in a program.
-   :data-structures: :program#create-and-use-linked-list-class:
+   :data-structures: :program#create-and-use-linked-list-class: &2140&
     1. Write a method to add a node to the top of a linked list.
     2. Write a method to iterate over the nodes in a linked list.
     3. Write a method to insert a node in an arbitrary position in a linked
@@ -353,7 +353,7 @@ By the end of this unit, students should be able to:
        or index.
     5. Write a method to do an ordered insertion of a node into a linked list.
 3. Given a description of some data, decide which of a list or an array is the
-   best choice for data structure.  :data-structures:
+   best choice for data structure. :data-structures:
    :design#choose-a-reasonable-data-structure:
 
 Recursion
@@ -363,9 +363,9 @@ By the end of this unit, students should be able to:
 
 1. Write a recursive program that implements a recursive algorithm (e.g.,
    factorial, Fibonacci), given the algorithm.  :recursion:
-   :program#write-recursive-code-given-algorithm:
+   :program#write-recursive-code-given-algorithm: &2140&
 2. Draw a diagram representing the state of a stack of method calls in a
-   recursive function. :recursion:
+   recursive function. :recursion: &2140&
    :communicate#describe-mental-model-of-recursion-as-stack:
 3. Create and implement recursive solution to a simple problem (e.g.,
    permutations of a sequence, all subsets of a sequence).
@@ -393,7 +393,7 @@ By the end of this unit, students should be able to:
 3. Given some data, decide if linear search or binary search should be applied.
    :algorithms#dchoose-an-algorithm-based-on-data:
 4. Write a program that implements linear search and binary search on an array.
-   :algorithms: :program#write-binary-and-linear-search:
+   :algorithms: :program#write-binary-and-linear-search: &2140& &2160&
 5. Write a program that implements binary search *recursively* on an array.
    :program#write-recursive-search-functions:
 6. Describe sorting algorithms (e.g., insertion sort, selection sort, recursive
@@ -401,14 +401,14 @@ By the end of this unit, students should be able to:
    :communicate#describe-basic-sorting-algorithms:
 7. Compare and contrast sorting algorithms (e.g., insertion sort, selection
    sort, recursive merge sort, quick sort).
-   :communicate#compare-sorting-algorithms:
+   :communicate#compare-sorting-algorithms: &2140&
     1. List the runtime requirements of different sorting algorithms. 
        :algorithms#complexity-of-sorting-algorithms:
     2. Explain why choosing a poor pivot reduces the overall performance of the
        quick sort algorithm.
 8. Write a program to implement sorting algorithms (e.g., insertion sort,
    selection sort, recursive merge sort, quick sort).  :algorithms:
-   :program#write-sorting-alrogithms:
+   :program#write-sorting-alrogithms: &2160&
 
 [^searching]: Both linear search and binary search are COMP 1010 learning
 objectives.
