Start colouring dependencies.

--- a/blog/May 20, 2020.md
+++ b/blog/May 20, 2020.md
@@ -4,6 +4,7 @@ To do:
       other courses.
     * [X] Figure out a dependency indicator (maybe it's just another tag?)
     * [X] Go through and mark the dependencies.
+    * [X] Colour the dependencies.
 * [ ] Start building the second half of the course based on known dependencies
       between first and second year courses.
 
