Starting to add narrative to course outline.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -51,7 +51,63 @@ Learning objectives {-}
 Part 1: Computing
 ------
 
-### Represent information
+### Computer science: what even is it? (0.5 weeks)
+
+Before you start looking at how to apply concepts from computer science using
+computers, you should get a more holistic idea of computer science by surveying
+the disciplines *within* computer science.
+
+Recommended ideas for instruction:
+
+1. Approachable problems and problem descriptions that require *no* knowledge of
+   computer science, and no use of computers on the part of the student.
+2. Visits by grad students: A day in the life.
+3. Visits by co-op students: Where have they worked? Where do they want to work?
+4. Visits by faculty: What do they study? How do they study that?
+
+By the end of this unit, students should be able to:
+
+1. List and describe at least 2 different subdisciplines of computer science
+   (name of subdiscipline, what the subdiscipline studies, how it studies
+   that). :concepts:
+2. Approach upper-year and grad students either directly or through student
+   clubs for guidance. :concepts:
+
+### What even is a computer? (0.5 weeks)
+
+Now that you have an idea of what computer science is, and who computer
+scientists are, we need to spend a little bit of time getting on the same page
+about what we mean by "computer".
+
+In this unit, we'll spend some time looking at the etymology of the word
+"computer" and how the meaning of the word has changed over the last century.
+
+We're also going to try to put together a list of things that a computer is
+capable of computing.
+
+Recommended ideas for instruction:
+
+By the end of this unit, students should be able to:
+
+1. List and explain at least two different interpretations of the word
+   "computer".  :concepts:
+2. Give an example of a problem that a computer is capable of solving.
+   :concepts:
+3. Give an example of a problem that a computer is **not** capable of solving.
+   :concepts:
+
+### How do you represent *stuff*?
+
+We've learned that computers aren't really very smart, but when we consider the
+things that computers *can* do, they seem truly magical, and appear to be able
+to go way beyond the kinds of problems that they're actually capable of solving.
+How do they do that?
+
+Now we're going to spend some time thinking about how to **abstract** ideas and
+information in such a way that computers can actually do something with them.
+
+Recommended ideas for instruction:
+
 
 By the end of this unit, students should be able to:
 
