Building the narrative for the course.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -51,19 +51,21 @@ Learning objectives {-}
 Part 1: Computing
 ------
 
-### Computer science: what even is it? (0.5 weeks)
+### Computer science: what even is it?
 
 Before you start looking at how to apply concepts from computer science using
 computers, you should get a more holistic idea of computer science by surveying
 the disciplines *within* computer science.
 
-Recommended ideas for instruction:
+#### Ideas for instruction
 
 1. Approachable problems and problem descriptions that require *no* knowledge of
    computer science, and no use of computers on the part of the student.
 2. Visits by grad students: A day in the life.
 3. Visits by co-op students: Where have they worked? Where do they want to work?
 4. Visits by faculty: What do they study? How do they study that?
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -73,7 +75,7 @@ By the end of this unit, students should be able to:
 2. Approach upper-year and grad students either directly or through student
    clubs for guidance. :concepts:
 
-### What even is a computer? (0.5 weeks)
+### What even is a computer?
 
 Now that you have an idea of what computer science is, and who computer
 scientists are, we need to spend a little bit of time getting on the same page
@@ -85,7 +87,9 @@ In this unit, we'll spend some time looking at the etymology of the word
 We're also going to try to put together a list of things that a computer is
 capable of computing.
 
-Recommended ideas for instruction:
+#### Ideas for instruction
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -106,8 +110,9 @@ How do they do that?
 Now we're going to spend some time thinking about how to **abstract** ideas and
 information in such a way that computers can actually do something with them.
 
-Recommended ideas for instruction:
+#### Ideas for instruction:
 
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -122,21 +127,80 @@ By the end of this unit, students should be able to:
 9. [*comp1500-encode-an-image]
 10. [*comp1500-predict-animation]
 
-### Logic and Circuits
+### Where did computer science even come from?
+
+Now we can represent information, but that's still not very smart ---
+information, by itself, doesn't *do* anything no matter how we choose to
+represent it.
+
+In order to make our machines *do* something, we need to take a small diversion
+into *philosophy*. We're also going to take a diversion into some truly abstract
+representations of what "computing" something really means. We'll meet some
+interesting characters (Turing, Boole), and, ideally, take a look at computing
+and computation from a historical and international perspective.
+
+#### Ideas for instruction
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
 1. [*comp1500-evaluate-logical-expressions]
    [=comp1010-evaluate-boolean-expressions-logical-operators]
 2. [*comp1500-truth-tables]
-3. [*comp1500-expressions-as-circuits]
-4. [*comp1500-draw-adders]
-5. [*comp1500-evaluate-adders]
-6. [*comp1500-circuits-to-arithmetic]
-7. [*comp1500-predict-the-output-circuits]
-8. [*comp1500-conditional-circuits]
+3. [*comp1500-turing-machines]
+4. [*comp1500-evaluate-turing-machine]
 
-### General purpose computing
+### How do we do logic *physically*?
+
+All this logic and philosophy doesn't seem very tangible --- we can't *touch*
+truthiness or falseness. We can sure think about them, filling in tables, and
+feeling confident about assertions of true or false statements, but there's
+still some pretty big gaps in our body of knowledge:
+
+* How do we *physically* represent logic? We've spent a lot of effort trying to
+  represent physical things abstractly, but now we have to spend some effort
+  doing the reverse.
+* How do we actually *do* something with logic? We're going to take a look at
+  how to do basic arithmetic using logic!
+* How do we use logic to help us make decisions? Computers *don't* just do
+  simple arithmetic, they seem to be able to make decisions --- how can we do
+  something like that?
+  
+#### Ideas for instruction
+
+#### Objectives
+
+By the end of this unit, students should be able to:
+
+1. [*comp1500-expressions-as-circuits]
+2. [*comp1500-draw-adders]
+3. [*comp1500-evaluate-adders]
+4. [*comp1500-circuits-to-arithmetic]
+5. [*comp1500-predict-the-output-circuits]
+6. [*comp1500-conditional-circuits]
+
+### Scaling up: General purpose computing
+
+OK, cool! Now we can actually start *doing* things with computers, but we're
+currently limited to basic arithmetic and simple decisions, and that doesn't
+really represent what a modern computer is capable of doing (or is it?).
+
+In order to start thinking about *real* computers, we're going to have to take a
+bit of a leap and start thinking about some of their parts abstractly (what does
+that word mean again?).
+
+We're going to take a look at a specific *kind* of computer architecture (the
+*von Neumann architecture*), where that computer architecture uses the basic
+building blocks that we learned about in the previous chapter. The really
+significant differences between what we've seen and what we're going to look at
+is that these computers can *remember* things, and they can get *input* and
+provide *output* (we can tell them what to operate on, and they can tell us a
+result).
+
+#### Ideas for instruction
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -149,7 +213,26 @@ By the end of this unit, students should be able to:
 7. [*comp1500-memory-addressing]
 8. [*comp1500-memory-to-registers]
 
-### Assembly language programming
+### PROGRAMMING!
+
+At this point we've taken a few *giant* leaps up to something that barely
+resembles the computers we've got in front of us: We have memory, input, output,
+and a *thing* that can compute stuff. But we're still missing something: how do
+we tell that thing *what to do*? How do we communicate with it?
+
+To be able to communicate with a computer, *we* need to learn a new language ---
+a computer isn't smart enough to understand human languages, and human languages
+aren't precise enough to tell a computer unambiguously what we want it to do.
+
+We've learned that machines operate on numbers, specifically *binary* numbers.
+We're going to learn an "assembly language", a language that can be translated
+literally and directly into binary. The language that we learn will give us the
+ability to write down the instructions that we want to give to a computer in a
+way that the computer can understand and act on.
+
+#### Ideas for instruction
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -159,6 +242,35 @@ By the end of this unit, students should be able to:
 4. [*comp1500-repetition] [~comp1010-use-basic-loops]
 
 ### Algorithms
+
+Communicating with the machine how to compute what you want is just the first
+part of being a computer scientist. Computer science also studies the common
+operations and results that you might tell a computer how to compute: finding
+things, ordering things, relating things to one another. These operations and
+results are referred to as "algorithms".
+
+We're going to take a step back from programming for a second, back to the world
+of abstraction. We're going to look at some very common algorithms that all
+computer scientists know and use. The algorithms that we're going to look at are
+*so* common, in fact, that you've definitely used these algorithms to find or
+order physical things in your own life.
+
+#### Ideas for instruction
+
+1. Get a collection of physical objects that you can ask students to "find"
+   things by a specific property.
+2. Get a collection of physical objects that you can ask students to "sort"
+   things by a specific property.
+3. After instruction on searching and sorting algorithms, ask the students to
+   apply the operations literally on their collection of things, ask them to
+   make some observations about what the algorithms are doing.
+4. Ask the students to compare their own ad hoc searching and sorting approaches
+   to the searching and sorting algorithms you've given them instruction on. Is
+   it *possible* for a computer to do the kinds of searching and sorting they're
+   doing? Is what they're doing in any way equivalent to what the algorithms are
+   doing?
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -170,7 +282,50 @@ By the end of this unit, students should be able to:
    [=comp1010-measure-search-complexity] [=comp1010-use-complexity-to-compare]
    [=comp1010-data-requirements-for-algorithms]
 
-### Programming in Scratch (or JavaScript)
+### Programming (like, for real this time)
+
+Nothing that we've done so far applies to a *real* computer: representing
+information doesn't *do* anything; logic and circuits are too abstract and low
+level to accomplish anything meaningful; processors *describe* the kinds of
+machine that we're using, but in too abstract of a way; the assembly language we
+used isn't even a *real* assembly language; algorithms are, by definition,
+abstractions!
+
+So let's fix that! Now we're going to look at a *real* programming language on a
+*real* device: the [micro:bit]!
+
+The micro:bit editor gives us the ability to create programs in two ways:
+
+1. Using a visual editor with blocks that look like puzzle pieces, or
+2. Using a programming language called JavaScript.
+
+The choice for how you want to create your program is entirely up to you, but if
+you plan on moving to COMP 1000 pt 2, your transition will be *easier* if you
+start taking a look at JavaScript here.
+
+The assembly language that we looked at before is considered to be an
+"unstructured" programming language --- it's literally just instructions. The
+micro:bit editor provides us with a "structured" programming language and
+environment. You will discover that many of the *concepts* that you've already
+seen still fit into this environment, but the structured nature of this
+environment makes it easier to build more complicated software, and on real
+hardware.
+
+[micro:bit]: https://makecode.microbit.org/
+
+#### Ideas for instruction
+
+1. The micro:bit environment is not strictly required here, and there are many
+   web sites and environments that use effectively the same underlying
+   technology. [Scratch] is the most popular, but doesn't let you see the
+   underlying JavaScript. [code.org] is also popular and comes with many
+   examples, but doesn't let you *edit* JavaScript (you can *see* it, but can't
+   edit).
+
+[Scratch]: https://scratch.mit.edu/
+[code.org]: https://code.org
+
+#### Objectives
 
 By the end of this unit, students should be able to:
 
@@ -188,12 +343,139 @@ By the end of this unit, students should be able to:
 9. [*comp1500-visual-io] [=comp1500-io] [=comp1010-accept-use-input]
 10. [*comp1500-random-numbers]
 
-### Topics in CS
-
 Part 2: Programming
-------
+-------------------
 
-### Programming in Java
+### Programming in Java (like, for *really* real this time)
+
+Welcome to second term! We're going to kick off this term by learning how to
+*really* program, using a **really real** programming language: Java. Learning
+to program in a real programming language is a bit different from the
+environment that you used before, but it's more directly applicable to
+real-world situations.
+
+Java is **everywhere** --- it's in your pockets, powering your favourite web
+sites, crunching on scientific data.
+
+#### Ideas for instruction
+
+#### Objectives
+
+By the end of this unit, students should be able to:
+
+### *Implementing* searching and sorting
+
+We've previously seen searching and sorting algorithms, but we only thought
+about them abstractly, and maybe moved some things around on a table. While
+those exercises were helpful to understand the concepts of searching and
+sorting, we still can't tell computers *how* to find or order things.
+
+To get a computer to find and order things, we need to be able to accomplish
+several new tasks:
+
+1. Represent *primitive* information (numbers),
+2. Represent *collections* of primitive information (arrays), and
+3. Search through and sort collections of information.
+
+#### Ideas for instruction
+
+#### Objectives
+
+By the end of this unit, students should be able to:
+
+### Representing complex information
+
+While numbers give us the ability to reason about and implement some algorithms
+in a fairly simple way (we can all universally agree that numbers are ordered
+and that we can or cannot find one in a collection of them), the real world
+isn't quite so simple. In the real world, we have real, physical things. Even in
+the world of abstractions, we've got ideas that aren't nearly as simple as
+numbers: think way back to representing *pictures*.
+
+Programming languages like Java give us the ability to express how to represent
+complex information using a concept called "classes". We're going to use classes
+to represent complex information like physical things, and abstract things that
+aren't just simple numbers.
+
+#### Ideas for instruction
+
+#### Objectives
+
+### Getting lots of information
+
+So far all of the "input" that we've provided to our programs have been through
+the keyboard, but with classes and collections, we're very quickly approaching
+an unreasonable volume of data to be entering by keyboard, or hard-code in our
+programs.
+
+You *should* be familiar with the ideas of "files" and "folders" on your
+computer. Even if a file is nothing more to you than an icon that, when
+double-clicked on, opens up into a Word document, you should realize that a file
+is a place where *information* is stored for the long-term (what kind of memory
+was that?).
+
+Now we're going to take a look at how to use files in our programs to work with
+*lots* of data. Specifically, we're going to look at plain text files, and we're
+going to learn how to get data out of a file and into the classes that we've
+been building.
+
+#### Ideas for instruction
+
+#### Objectives
+
+### Data structures, abstract data types, and software design
+
+We previously learned about arrays when we implemented searching and sorting
+algorithms in Java. The main limitation of arrays, when working with data from
+files, is that arrays have a *fixed size*.
+
+We're now going to take a look at a new way to organize and represent
+collections of information in our software: lists! We're also going to
+*generalize* on the idea of representing collections by separating out what we
+want to be able to do with something vs how it's actually done (interfaces and
+implementations), and how to make decisions about how to separate those two
+things from one another (software design).
+
+By generalizing our idea of representing collections, we're actually taking our
+first dip into data structures and abstract data types. One part of what we're
+going to do here is to compare and contrast implementations to see which one is
+best, and how to choose the best one for a specific situation.
+
+#### Ideas for instruction
+
+1. Implement a linked list.
+2. Extract the interface/ADT.
+3. Implement an array list that satisfies the same interface.
+4. Compare and contrast by experimentation.
+5. Ask students to implement a hybrid array/linked list (use fixed size arrays
+   that are linked on filling).
+
+#### Objectives
+
+### Recursion
+
+The very last topic in the course is the most abstract, but it's going to help
+us learn both about algorithms *and* how our programming languages and
+environments can be used to encode abstract ideas.
+
+Recursion is something you may have seen in an extremely abstract way in a
+*math* class: [recurrence relations]. Think about things like the [Fibonacci
+sequence], where each number in the sequence is defined by the numbers that come
+before it ($F_n = F_{n-1} + F_{n-2}$).
+
+We're going to look at recursion from two perspectives:
+
+1. Using it as a tool to implement things like recurrence relations (both for
+   numeric sequences and operations on data structures),
+2. Making observations about what's happening under the covers of our
+   programming language when we implement and run a recursive program.
+
+[recurrence relations]: https://en.wikipedia.org/wiki/Recurrence_relation
+[Fibonacci sequence]: https://en.wikipedia.org/wiki/Fibonacci_number
+
+#### Ideas for instruction
+
+#### Objectives
 
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
