Building second half of COMP 1000

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -277,10 +277,16 @@ By the end of this unit, students should be able to:
 1. [*comp1500-define-algorithm]
 2. [*comp1500-divide-and-conquer] [~comp1010-apply-top-down-design]
 3. [*comp1500-apply-searching-algorithms] [~comp1010-linear-search]
-   [~comp1010-binary-search]
+   [~comp1010-binary-search] [~comp1020-list-searching-algorithms]
 4. [*comp1500-compare-linear-binary-search]
    [=comp1010-measure-search-complexity] [=comp1010-use-complexity-to-compare]
    [=comp1010-data-requirements-for-algorithms]
+   [=comp1020-compare-searching-algorithms]
+   [=comp1010-limitations-of-linear-search]
+   [=comp1010-limitations-of-binary-search]
+5. [*comp1020-describe-basic-sorting-algorithms]
+6. [*comp1020-compare-sorting-algorithms]
+7. [*comp1020-complexity-of-sorting-algorithms]
 
 ### Programming (like, for real this time)
 
@@ -355,13 +361,56 @@ environment that you used before, but it's more directly applicable to
 real-world situations.
 
 Java is **everywhere** --- it's in your pockets, powering your favourite web
-sites, crunching on scientific data.
+sites, crunching on scientific data, among many, *many* other places.
 
 #### Ideas for instruction
+
+* The idea here is that we're transferring knowledge, much in the same way that
+  the existing COMP 1020 does.
 
 #### Objectives
 
 By the end of this unit, students should be able to:
+
+* [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
+  [=comp1020-first-year-review]
+* [*comp1010-declare-use-variables] [=comp1500-variables]
+* [*comp1010-write-evaluate-arithmetic-expressions]
+  [=comp1500-visual-language-simple-sequence]
+* [*comp1010-basic-print-debugging]
+* [*comp1010-accept-use-input] [=comp1500-visual-io] [=comp1500-io]
+* [*comp1010-write-simple-functions] [=comp1500-custom-functions]
+* [*comp1010-use-floating-point]
+* [*comp1010-evaluate-float-expression]
+* [*comp1010-determine-expression-type]
+* [*comp1010-explain-difference-number-types]
+* [*comp1010-call-math-library-functions]
+* [*comp1010-create-use-strings]
+* [*comp1010-convert-numbers-strings]
+* [*comp1010-create-use-char]
+* [*comp1010-evaluate-string-expressions]
+* [*comp1010-use-different-number-types]
+* [*comp1010-casting-between-number-types]
+* [*comp1010-evaluate-casting-in-expression]
+* [*comp1010-create-and-use-boolean-variables] [~comp1500-logical-expressions]
+* [*comp1010-evaluate-boolean-expressions-logical-operators]
+  [=comp1500-logical-expressions]
+* [*comp1010-use-conditional-statements] [=comp1500-conditional-statements]
+* [*comp1010-use-relational-operators]
+* [*comp1010-evaluate-complex-boolean-expression]
+* [*comp1010-string-comparison]
+* [*comp1010-explain-float-equality]
+* [*comp1010-use-short-circuit-boolean-expressions]
+* [*comp1010-evaluate-short-circuit-boolean-expressions]
+* [*comp1010-else-if-nested-blocks] [=comp1500-conditional-statements]
+* [*comp1010-use-basic-loops] [=comp1500-looping]
+* [*comp1010-evaluate-loop-execution]
+* [*comp1010-debug-with-stack-trace]
+* [*comp1010-use-nested-loops]
+* [*comp1010-evaluate-nested-loop-execution]
+* [*comp1010-use-nested-mixed-control-structures]
+* [*comp1010-functions-with-params-return]
+* [*comp1010-accumulate-data]
 
 ### *Implementing* searching and sorting
 
@@ -383,6 +432,19 @@ several new tasks:
 
 By the end of this unit, students should be able to:
 
+* [*comp1010-represent-data-collections]
+* [*comp1010-create-use-arrays]
+* [*comp1010-compare-strings-arrays]
+* [*comp1010-list-default-array-values-for-type]
+* [*comp1010-compare-values-with-null]
+* [*comp1010-copy-array-contents]
+* [*comp1010-compare-array-contents]
+* [*comp1010-explain-differences-between-primitives-and-arrays]
+* [*comp1010-functions-with-array-params-return]
+* [*comp1010-implement-linear-search] [~comp1020-write-binary-and-linear-search]
+* [*comp1010-implement-binary-search] [~comp1020-write-binary-and-linear-search]
+* [*comp1020-write-sorting-algorithms]
+
 ### Representing complex information
 
 While numbers give us the ability to reason about and implement some algorithms
@@ -400,6 +462,10 @@ aren't just simple numbers.
 #### Ideas for instruction
 
 #### Objectives
+
+By the end of this unit, students should be able to:
+
+* 
 
 ### Getting lots of information
 
@@ -422,6 +488,8 @@ been building.
 #### Ideas for instruction
 
 #### Objectives
+
+By the end of this unit, students should be able to:
 
 ### Data structures, abstract data types, and software design
 
@@ -452,6 +520,10 @@ best, and how to choose the best one for a specific situation.
 
 #### Objectives
 
+By the end of this unit, students should be able to:
+
+* [*comp1010-list-array-limitations]
+
 ### Recursion
 
 The very last topic in the course is the most abstract, but it's going to help
@@ -476,6 +548,8 @@ We're going to look at recursion from two perspectives:
 #### Ideas for instruction
 
 #### Objectives
+
+By the end of this unit, students should be able to:
 
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
