A variety of different things.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -18,7 +18,7 @@ experience.
 Course outcomes {-}
 ===============
 
-Part 1: Computing
+Part 1: Computing {-}
 ------
 
 By the end of part 1 of this course, a student should be able to:
@@ -31,7 +31,7 @@ By the end of part 1 of this course, a student should be able to:
 4. Use and evaluate searching algorithms. :algorithms:
 5. Gain a better understanding of computer science as a discipline. :concepts:
 
-Part 2: Programming
+Part 2: Programming {-}
 ------
 
 By the end of part 2 of this course, a student should be able to:
@@ -168,6 +168,16 @@ still some pretty big gaps in our body of knowledge:
   something like that?
   
 #### Ideas for instruction
+
+Some images that I've seen floating around building logic gates physically:
+
+* [Logic gates with dominoes]
+* [Logic gates with water]
+
+[Logic gates with dominoes]:
+https://www.reddit.com/r/geek/comments/gvw4iy/logic_gates_using_dominoes/
+[Logic gates with water]:
+https://twitter.com/page_eco/status/1188749430020698112?lang=en
 
 #### Objectives
 
@@ -467,6 +477,7 @@ By the end of this unit, students should be able to:
 
 * 
 
+
 ### Getting lots of information
 
 So far all of the "input" that we've provided to our programs have been through
@@ -553,8 +564,6 @@ By the end of this unit, students should be able to:
 
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
-
-`<h1>Appendix</h1>`{=html}
 
 \appendix
 \appendixpage
