Appendices in html+pdf

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -48,8 +48,8 @@ By the end of part 2 of this course, a student should be able to:
 Learning objectives {-}
 ===================
 
-Part 1: Computing
-------
+Computing
+---------
 
 ### Computer science: what even is it?
 
@@ -359,8 +359,8 @@ By the end of this unit, students should be able to:
 9. [*comp1500-visual-io] [=comp1500-io] [=comp1010-accept-use-input]
 10. [*comp1500-random-numbers]
 
-Part 2: Programming
--------------------
+Programming
+-----------
 
 ### Programming in Java (like, for *really* real this time)
 
@@ -565,6 +565,3 @@ By the end of this unit, students should be able to:
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
 
-\appendix
-\appendixpage
-\addappheadtotoc
